--- a/css/index.css
+++ b/css/index.css
@@ -6,11 +6,62 @@
   font-style: normal;
   font-variation-settings: "wdth" 100;
   color: rgb(44, 43, 43);
+  line-height: 1.6;
   box-sizing: border-box;
 }
 
 body {
+  margin: 0;
+  padding: 0;
   background-color: rgb(210, 203, 194);
+}
+
+header {
+  position: sticky;
+  top: 0;
+}
+nav ul {
+  background-color: rgb(111, 115, 115);
+  box-shadow: 10px 5px 5px rgb(52, 51, 51);
+  margin: 0;
+  padding: 0;
+}
+
+.nav_bar {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+li {
+  list-style-type: none;
+  padding: 25px;
+  margin: 10px;
+}
+li a {
+  text-decoration: none;
+  padding: 15px;
+  font-size: 22px;
+  border: solid transparent 2px;
+}
+
+.nav_bar li :hover {
+  background: whitesmoke;
+  border: solid whitesmoke 2px;
+  box-shadow: 3px 3px 5px rgb(169, 167, 167);
+  border-radius: 30% 10%;
+  opacity: 0.9;
+}
+
+#skills,
+#projects {
+  margin-top: 150px;
+}
+
+#projects_list li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .center {
@@ -45,7 +96,6 @@ img {
   margin: 18px;
   font-weight: 600;
   font-size: 17px;
-  line-height: 1.6;
 }
 
 .icons {
