--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
 /* =================================== */
 
 * {
-  /* outline: 2px solid rgb(25, 119, 54); */
+  outline: 2px solid rgb(25, 119, 54);
   font-family: "Merriweather", serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -119,7 +119,7 @@ img {
   flex-direction: column;
   align-items: flex-start;
   flex-wrap: wrap;
-  margin-left: 2.5rem;
+  margin-left: 1.25rem;
   flex: 1;
 }
 
@@ -132,13 +132,13 @@ p.bold_txt {
   flex-direction: column;
   align-items: flex-end;
   flex-wrap: wrap;
-  margin-right: 2.5rem;
+  margin-right: 1.25rem;
   flex: 1;
 }
 
 .job_descr {
   flex-wrap: wrap;
-  max-width: 30em;
+  max-width: 25em;
   margin: 1.25px auto;
   font-size: 1.1rem;
   margin-bottom: 8em;
@@ -168,6 +168,16 @@ p.bold_txt {
 }
 
 /* =================================== */
+/* Small mobile */
+/* =================================== */
+/* 
+@media (min-width: 481px) {
+  .bullet {
+    width: 90%;
+  }
+} */
+
+/* =================================== */
 /* Phone */
 /* =================================== */
 
@@ -185,6 +195,20 @@ p.bold_txt {
     font-size: 1rem;
     border: solid transparent 0.2em;
   }
+
+  .par {
+    width: 90%;
+  }
+
+  .center {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #skills,
+  #projects {
+    margin-top: 6em;
+  }
 }
 
 /* =================================== */
@@ -199,6 +223,10 @@ p.bold_txt {
     color: rgb(68, 69, 66);
     padding: 0.2em;
     font-size: 1.2rem;
+  }
+  #skills,
+  #projects {
+    margin-top: 6em;
   }
 }
 
