--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
 /* =================================== */
 
 * {
-  outline: 2px solid rgb(25, 119, 54);
+  /* outline: 2px solid rgb(25, 119, 54); */
   font-family: "Merriweather", serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -167,15 +167,27 @@ p.bold_txt {
   color: whitesmoke;
 }
 
+.footer_class {
+  display: flex;
+  justify-content: center;
+  padding: 1em;
+}
+.footer_par {
+  font-weight: bold;
+  font-size: 1.1em;
+}
 /* =================================== */
 /* Small mobile */
 /* =================================== */
-/* 
+
 @media (min-width: 481px) {
-  .bullet {
-    width: 90%;
+  .skills_background li {
+    background: whitesmoke;
+    border-radius: 30% 10%;
+    padding: 1.2em;
+    font-size: 1.1rem;
   }
-} */
+}
 
 /* =================================== */
 /* Phone */
@@ -192,7 +204,7 @@ p.bold_txt {
   }
   li a {
     padding: 0.1em;
-    font-size: 1rem;
+    font-size: 1.2rem;
     border: solid transparent 0.2em;
   }
 
@@ -221,8 +233,8 @@ p.bold_txt {
   }
   li a {
     color: rgb(68, 69, 66);
-    padding: 0.2em;
-    font-size: 1.2rem;
+    padding: 0.4em;
+    font-size: 1.4rem;
   }
   #skills,
   #projects {
@@ -236,12 +248,11 @@ p.bold_txt {
 @media (min-width: 1024px) {
   li {
     padding: 0.9em;
-    margin: 0.8em;
   }
   li a {
     color: rgb(225, 230, 230);
     padding: 0.4em;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     border: solid transparent 0.2em;
   }
 
@@ -251,12 +262,18 @@ p.bold_txt {
   }
 
   .par {
-    font-size: 1.4rem;
+    font-size: 1.7rem;
   }
 
   .job_descr,
   .date_location,
   .job_title {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+  }
+  h2 {
+    font-size: 3.5rem;
+  }
+  .center.heading {
+    font-size: 3.5rem;
   }
 }
