--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
   font-weight: 400;
   font-style: normal;
   font-variation-settings: "wdth" 100;
-  color: rgb(44, 43, 43);
+  color: #2c2b2b;
   line-height: 1.6;
   box-sizing: border-box;
 }
@@ -17,7 +17,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(210, 203, 194);
+  background-color: #d2cbc2;
   font-size: 1rem;
 }
 
