--- a/css/index.css
+++ b/css/index.css
@@ -19,15 +19,17 @@ body {
   padding: 0;
   background-color: #d2cbc2;
   font-size: 1rem;
+  text-align: center;
 }
 
 header {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 nav ul {
-  background-color: rgb(111, 115, 115);
-  box-shadow: 1em 0.5em 0.5em rgb(52, 51, 51);
+  background-color: #6f7373;
+  box-shadow: 1em 0.5em 0.5em #343333;
   border-bottom-left-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
   margin: 0;
@@ -53,9 +55,9 @@ li a {
 }
 
 .nav_bar li :hover {
-  background: rgb(141, 140, 140);
-  border: solid rgb(159, 156, 156) 0.2em;
-  box-shadow: 0.2em 0.2em 0.3em rgb(167, 165, 165);
+  background: #8d8c8c;
+  border: solid #9f9c9c 0.2em;
+  box-shadow: 0.2em 0.2em 0.3em #a7a5a5;
   border-radius: 30% 10%;
   opacity: 0.9;
 }
@@ -70,7 +72,7 @@ h2 {
 }
 
 .skills_background li {
-  background: whitesmoke;
+  background: #f5f5f5;
   border-radius: 30% 10%;
 }
 
@@ -146,7 +148,7 @@ p.bold_txt {
 
 .bullet::before {
   content: "•";
-  color: black;
+  color: #000000;
   font-weight: bold;
 }
 
@@ -161,10 +163,71 @@ p.bold_txt {
   justify-content: center;
   list-style-type: none;
   padding: unset;
+  z-index: 1;
 }
 
 .icons li :hover {
-  color: whitesmoke;
+  color: #f5f5f5;
+}
+
+form {
+  display: inline-block;
+  padding: 2em;
+  background-color: #7f8282;
+  box-shadow: 1em 0.4em 0.4em #474646;
+  border-radius: 1.5em;
+}
+
+label {
+  display: inline-block;
+  min-width: 5.6em;
+  text-align: center;
+}
+
+input,
+textarea {
+  width: 18.75em;
+  box-sizing: border-box;
+  border: 1px solid #47454599;
+  border-radius: 0.5em;
+}
+
+input:focus,
+textarea:focus {
+  outline-style: solid;
+  border-color: #1c1b1c;
+}
+
+textarea {
+  vertical-align: top;
+  height: 5em;
+}
+
+.button {
+  padding: 0.3em;
+  margin-left: 6.2em;
+  border-radius: 0.5em;
+  background-color: #aaa2a2;
+  border: 0.2em solid transparent;
+}
+.button:hover {
+  background-color: #fff;
+  border: 0.2em solid #686767;
+}
+#messages li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+
+.edit_btn,
+.remove_btn {
+  max-width: 9em;
+  padding: 0.8em;
+  border-radius: 0.5em;
+  border: none;
+  flex: 1;
 }
 
 .footer_class {
