--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,7 @@ nav ul {
 .nav_bar {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   flex-wrap: wrap;
 }
 
@@ -47,11 +48,12 @@ li {
   padding: 1.5em;
   margin: 0.8em;
 }
-li a {
+.nav_bar li a {
   text-decoration: none;
-  padding: 0.8em;
+  /* padding: 0.8em; */
   font-size: 1.5rem;
   border: solid transparent 0.2em;
+  display: block;
 }
 
 .nav_bar li :hover {
@@ -61,6 +63,25 @@ li a {
   border-radius: 30% 10%;
   opacity: 0.9;
 }
+
+/* Toggle button start */
+.toggle_btn {
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+.toggle_btn .bar {
+  height: 3px;
+  width: 100%;
+  background-color: aliceblue;
+  border-radius: 10px;
+}
+/* Toggle button end */
 
 #skills,
 #projects {
@@ -78,6 +99,9 @@ h2 {
 ul#projects_list,
 ul.center.skills_background {
   padding: unset;
+}
+li a {
+  text-decoration: none;
 }
 #projects_list li a {
   color: #ffffff;
@@ -272,6 +296,10 @@ li span {
   .button {
     margin: unset;
   }
+  /* clear sticky nev bar */
+  /* nav ul {
+    background-color: #3f404049;
+  } */
 }
 @media (max-width: 481px) {
   .skills_background li {
@@ -313,6 +341,25 @@ li span {
   #skills,
   #projects {
     margin-top: 6em;
+  }
+  /* new toggle */
+  .nav_toggle {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .toggle_btn {
+    display: flex;
+  }
+  .nav_links ul {
+    width: 100%;
+  }
+
+  .nav_links {
+    display: none;
+    width: 100%;
+  }
+  .nav_links.active {
+    display: flex;
   }
 }
 
